objects/ASI_CRM_Purchase_Contract__c.object
<CustomObject>
    <description>ASI CRM JP - Purchase Contract</description>
    <fields>
        <fullName>ASI_CRM_Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <summarizedField>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Amount_Paid__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Purchase_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Annual_Turnover__c</fullName>
        <label>Annual Turnover</label>
        <summarizedField>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Annual_Turnover__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Purchase_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Application_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Contracts9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sys_Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_BS_Retailer_Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BS/Retailer/Ship To</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP Off-Trade Outlet, JP Bar Supplier, JP Wholesaler</value>
            </filterItems>
            <filterItems>
                <field>$UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_JP_IT_Team</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Purchase Contracts</relationshipLabel>
        <relationshipName>Purchase_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Clone_Id__c</fullName>
        <label>Clone Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Clone_Record_Type_Id__c</fullName>
        <label>Clone Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Amount__c</fullName>
        <label>Contract Amount</label>
        <summarizedField>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Promotion_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Purchase_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year__c</fullName>
        <inlineHelpText>Format: FY{YY}{YY}, e.g. FY1516</inlineHelpText>
        <label>Fiscal Year</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fixed_Spot__c</fullName>
        <label>Fixed/Spot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JDE Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_CRM_JP_On_Trade_Outlet</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_JP_IT_Team</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Purchase Contracts (Outlet)</relationshipLabel>
        <relationshipName>Purchase_Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Owner__c</fullName>
        <formula>Owner:User.LastName + &quot; &quot; + Owner:User.FirstName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Purchase_Contract_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Purchase Contract External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remaining_Balance__c</fullName>
        <formula>IF(CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP_SPTD_Contract&quot;), ASI_CRM_Contract_Amount__c - ASI_CRM_Amount_Paid__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remarks__c</fullName>
        <label>Remarks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer Development</fullName>
                </value>
                <value>
                    <fullName>Existing Custom Maintenance</fullName>
                </value>
                <value>
                    <fullName>Short Term Promotion Fee</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Association Matter</fullName>
                </value>
                <value>
                    <fullName>Others (Sales Planning Only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sales_Group__c</fullName>
        <label>Sales Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Staff_Code__c</fullName>
        <formula>Owner:User.ASI_TnE_Sub_Ledger__c</formula>
        <label>Staff Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Allow_Set_Draft__c</fullName>
        <formula>IF( CONTAINS($Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Object_API__c,  &apos;ASI_CRM_Purchase_Contract__c&apos; ) &amp;&amp; ( ISBLANK( $Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Record_Type__c ) || CONTAINS($Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Record_Type__c ,   RecordType.DeveloperName  ) ), $Setup.ASI_JP_Validation_Bypass__c.ASI_JP_Bybass_Validation__c , false)</formula>
        <label>Sys_Allow Set Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Current_Approver__c</fullName>
        <label>Sys Current Approver</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Quantity__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Quantity__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Purchase_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Target_Volume__c</fullName>
        <label>Total Target Volume</label>
        <summarizedField>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Target_Volume__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Purchase_Contract_Line_Item__c.ASI_CRM_Purchase_Contract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Turnover_Ratio__c</fullName>
        <formula>IF(ASI_CRM_Annual_Turnover__c = 0, 0, ASI_CRM_Contract_Amount__c / ASI_CRM_Annual_Turnover__c)</formula>
        <label>Turnover Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Which_To_Pay__c</fullName>
        <label>Which To Pay</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pay To Sold To</fullName>
                </value>
                <value>
                    <fullName>Pay To Ship To</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Wholesaler__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND ((2 AND 3) OR (4 AND 5))) OR 6</booleanFilter>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.ASI_CRM_CN_Inactive_Flag__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP Wholesaler, JP Bar Supplier</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP SPTD Contract, JP SPTD Contract Read-Only</value>
            </filterItems>
            <filterItems>
                <field>ASI_CRM_AccountsAdditionalField__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP Wholesaler, JP Off-Trade Outlet, JP Bar Supplier</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>JP Indirect Rebate Contract, JP Direct Rebate Contract, JP Direct Rebate Contract Read-Only, JP Indirect Rebate Contract Read-Only</value>
            </filterItems>
            <filterItems>
                <field>$UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>ASI_JP_IT_Team</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Purchase Contracts (Wholesaler)</relationshipLabel>
        <relationshipName>Purchase_Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Contract</label>
    <listViews>
        <fullName>ASI_CRM_JP_All_Purchase_Contract</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_BS_Retailer_Ship_To__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Sales_Group__c</columns>
        <columns>ASI_CRM_Staff_Code__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_SPTD_Contract,ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_SPTD_Contract_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Indirect_Rebate_Contract,ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Indirect_Rebate_Contract_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Direct_Rebate_Contract,ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Direct_Rebate_Contract_Read_Only</value>
        </filters>
        <label>All JP Purchase Contract</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_Direct_Rebate_Contract</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_BS_Retailer_Ship_To__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Sales_Group__c</columns>
        <columns>ASI_CRM_Staff_Code__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Direct_Rebate_Contract,ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Direct_Rebate_Contract_Read_Only</value>
        </filters>
        <label>JP Direct Rebate Contract</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_Direct_Rebate_Contract_Review</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_BS_Retailer_Ship_To__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Sales_Group__c</columns>
        <columns>ASI_CRM_Staff_Code__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Direct_Rebate_Contract_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>JP Direct Rebate Contract for Review</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Sales_Admin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_Indirect_Rebate_Contract</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_BS_Retailer_Ship_To__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Sales_Group__c</columns>
        <columns>ASI_CRM_Staff_Code__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Indirect_Rebate_Contract,ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Indirect_Rebate_Contract_Read_Only</value>
        </filters>
        <label>JP Indirect Rebate Contract</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_My_Purchase_Contract</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_BS_Retailer_Ship_To__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Sales_Group__c</columns>
        <columns>ASI_CRM_Staff_Code__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_SPTD_Contract,ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_SPTD_Contract_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Indirect_Rebate_Contract,ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Indirect_Rebate_Contract_Read_Only</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Direct_Rebate_Contract,ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_Direct_Rebate_Contract_Read_Only</value>
        </filters>
        <label>My JP Purchase Contract</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_SPTD_Contracts_for_Mass_Cancel</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_BS_Retailer_Ship_To__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Contract_Amount__c</columns>
        <columns>ASI_CRM_Sales_Group__c</columns>
        <columns>ASI_CRM_Staff_Code__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_SPTD_Contract</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>JP SPTD Contracts for Mass Cancel</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Sales_Planning</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_JP_SPTD_Contracts_for_Mass_Close</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_BS_Retailer_Ship_To__c</columns>
        <columns>ASI_CRM_Wholesaler__c</columns>
        <columns>ASI_CRM_Outlet__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Contract_Amount__c</columns>
        <columns>ASI_CRM_Amount_Paid__c</columns>
        <columns>ASI_CRM_Sales_Group__c</columns>
        <columns>ASI_CRM_Staff_Code__c</columns>
        <columns>ASI_CRM_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Purchase_Contract__c.ASI_CRM_JP_SPTD_Contract_Read_Only</value>
        </filters>
        <filters>
            <field>ASI_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filters>
        <label>JP SPTD Contracts for Mass Complete</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_JP_Sales_Planning</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Contract No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Contracts</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_JP_Direct_Rebate_Contract</fullName>
        <active>true</active>
        <label>JP Direct Rebate Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Direct_Rebate_Contract_Read_Only</fullName>
        <active>true</active>
        <label>JP Direct Rebate Contract Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Indirect_Rebate_Contract</fullName>
        <active>true</active>
        <label>JP Indirect Rebate Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_Indirect_Rebate_Contract_Read_Only</fullName>
        <active>true</active>
        <label>JP Indirect Rebate Contract Read-Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_Contract</fullName>
        <active>true</active>
        <label>JP SPTD Contract</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_JP_SPTD_Contract_Read_Only</fullName>
        <active>true</active>
        <label>JP SPTD Contract Read-Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_JP_Cant_Change_Back_Activated</fullName>
        <active>true</active>
        <errorConditionFormula>OR(RecordType.DeveloperName = &apos;ASI_CRM_JP_Indirect_Rebate_Contract_Read_Only&apos;, RecordType.DeveloperName = &apos;ASI_CRM_JP_SPTD_Contract_Read_Only&apos; ) &amp;&amp;
$UserRole.DeveloperName &lt;&gt; &apos;ASI_JP_Sales_Planning_Team&apos; &amp;&amp;
$UserRole.DeveloperName &lt;&gt; &apos;ASI_JP_Sales_Admin_Team&apos; &amp;&amp; 
ISPICKVAL( ASI_CRM_Status__c , &apos;Activated&apos;) &amp;&amp; ISPICKVAL(PRIORVALUE(ASI_CRM_Status__c),&quot;Complete&quot;)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Status__c</errorDisplayField>
        <errorMessage>You are NOT allowed to change back Status from Complete to Activated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Cant_Change_Back_Draft</fullName>
        <active>true</active>
        <errorConditionFormula>OR(RecordType.DeveloperName = &apos;ASI_CRM_JP_Direct_Rebate_Contract&apos;, RecordType.DeveloperName = &apos;ASI_CRM_JP_Indirect_Rebate_Contract&apos;, RecordType.DeveloperName = &apos;ASI_CRM_JP_SPTD_Contract&apos; ) &amp;&amp; ISPICKVAL( ASI_CRM_Status__c , &apos;Draft&apos;) &amp;&amp; ISPICKVAL(PRIORVALUE(ASI_CRM_Status__c),&quot;Cancelled&quot;)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Status__c</errorDisplayField>
        <errorMessage>You are NOT allowed to change back Status from Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Cant_Update_ContractNo</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_JP&apos;) &amp;&amp; ISCHANGED(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Change of Contract No. is not allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Cant_Update_DirRebateContract</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( RecordType.DeveloperName, &apos;ASI_CRM_JP_Direct_Rebate_Contract&apos;) &amp;&amp; $UserRole.DeveloperName &lt;&gt; &apos;ASI_JP_Sales_Admin_Team&apos; &amp;&amp; (ISPICKVAL( ASI_CRM_Status__c, &apos;Approved&apos;) || ISPICKVAL( ASI_CRM_Status__c, &apos;Complete&apos;)) &amp;&amp; ISCHANGED(ASI_CRM_Status__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Status__c</errorDisplayField>
        <errorMessage>You are not allowed to update Status of Direct Rebate Contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Check_Wholesaler_PayToSold</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_JP&apos;) &amp;&amp; ISPICKVAL( ASI_CRM_Which_To_Pay__c, &apos;Pay To Sold To&apos;) &amp;&amp; ISBLANK(ASI_CRM_Wholesaler__c)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Wholesaler__c</errorDisplayField>
        <errorMessage>Wholesaler must be specified if &apos;Pay To Sold To&apos; is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_End_Date_Within_FiscalYear</fullName>
        <active>true</active>
        <description>ASI_CRM_JP_End_Date_Within_FiscalYear</description>
        <errorConditionFormula>AND(CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_JP_SPTD_Contract&apos;), 
IF(
  MONTH(TODAY()) &gt; 6,
  ASI_CRM_End_Date__c &lt; DATE( YEAR(TODAY()) , 7, 1),
  ASI_CRM_End_Date__c &lt; DATE( YEAR(TODAY()) - 1 , 7, 1)
),
OR( ISNEW() ,  ISCHANGED(ASI_CRM_End_Date__c ) ) 
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_End_Date__c</errorDisplayField>
        <errorMessage>End Date must be equal or greater than current Fiscal Year.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_End_Date_for_Spot_Rebate</fullName>
        <active>true</active>
        <errorConditionFormula>If(CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_JP_Direct_Rebate_Contract&apos;) &amp;&amp; ISPICKVAL( ASI_CRM_Fixed_Spot__c , &apos;Spot&apos;) &amp;&amp; ISBLANK(ASI_CRM_End_Date__c), True, 
If(CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_JP_Indirect_Rebate_Contract&apos;) &amp;&amp; ISPICKVAL( ASI_CRM_Fixed_Spot__c , &apos;Spot&apos;) &amp;&amp; ISBLANK(ASI_CRM_End_Date__c), True, False))</errorConditionFormula>
        <errorDisplayField>ASI_CRM_End_Date__c</errorDisplayField>
        <errorMessage>For Spot Rebate Contract, End Date cannot be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_No_Modification_When_Complete</fullName>
        <active>false</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_JP&apos;) &amp;&amp; 
ISPICKVAL(ASI_CRM_Status__c, &apos;Activated&apos;) &amp;&amp;  
!CONTAINS($Profile.Name, &apos;System Administrator&apos;)</errorConditionFormula>
        <errorMessage>Purchase Contract is now in Complete status. No modification is allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Not_Allowed_To_Change_CloneId</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_JP&quot;),
    ISCHANGED(ASI_CRM_Clone_Id__c)
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Clone_Id__c</errorDisplayField>
        <errorMessage>You are not allowed to change the system field &apos;Clone Id&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Start_Date_Within_FiscalYear</fullName>
        <active>true</active>
        <description>ASI_CRM_JP_Start_Date_Within_FiscalYear</description>
        <errorConditionFormula>AND(
CONTAINS(RecordType.DeveloperName,&apos;ASI_CRM_JP_SPTD_Contract&apos;),
IF(Month(ASI_CRM_End_Date__c) &gt; 6, Month(ASI_CRM_Start_Date__c) &lt; 7 || Year(ASI_CRM_Start_Date__c) &lt; Year(ASI_CRM_End_Date__c), (Year(ASI_CRM_Start_Date__c) = (Year(ASI_CRM_End_Date__c) - 1) &amp;&amp; Month(ASI_CRM_Start_Date__c) &lt; 7) || Year(ASI_CRM_Start_Date__c) &lt; (Year(ASI_CRM_End_Date__c) - 1)
),
OR ( ISNEW() ,  ISCHANGED(ASI_CRM_Start_Date__c),ISCHANGED(ASI_CRM_End_Date__c) )  
)</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Start_Date__c</errorDisplayField>
        <errorMessage>Start Date must be within the same Fiscal Year as End Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_JP_Start_End_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_JP&apos;) &amp;&amp; ASI_CRM_Start_Date__c &gt; ASI_CRM_End_Date__c</errorConditionFormula>
        <errorDisplayField>ASI_CRM_End_Date__c</errorDisplayField>
        <errorMessage>End Date must be greater than or equal to Start Date.</errorMessage>
    </validationRules>
</CustomObject>